EWBService code cleanup